# tion_python

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  README_YANDEX_INTEGRATION.md  automation.py  devices.db  main.py  pyproject.toml  task.md  yandex_api_integration.py
.claude/: settings.local.json
.github/workflows/: ci.yml  tests.yml
api/: __init__.py  app.py  schemas.py
api/middleware/: __init__.py  auth.py
api/routes/: __init__.py  devices.py  yandex.py
context/: requirements.md
context/brd/: brd.md
context/conventions/: conventions.md
context/frd/: frd.md
deploy/ansible/: README.md  deploy.yml  inventory.example.yml  provision.yml
deploy/docker/: Dockerfile  docker-compose.yml
deploy/frp/: frpc.service  frpc.toml.example  frps.toml.example
deploy/nginx/: easy-breezy.conf.example
deploy/systemd/: easy-breezy-watchdog.service  easy-breezy-watchdog.timer  easy-breezy.service  eb-watchdog.sh
docs/: history.md  runbook.md  status.md  yandex-setup.md
docs/adr/: 0001-monorepo-and-stack.md  0002-ble-layer-architecture.md  0003-tion-pairing-smp-before-gatt.md  0004-set-verified-by-reread.md  0005-central-coexistence.md  0006-external-access-duckdns.md  0007-supervised-tasks-never-die.md  README.md
docs/protocol/: tion-co2plus-ble.md  tion-s4-ble.md
docs/tasks/TION-001/: architect_plan.md  plan.md
docs/tasks/TION-001/reports/: 0_orchestrator.md  1_explorer.md  2_analyst.md  3_architect.md  4_implementer.md  5_tester.md  6_qc.md
mobile/: README.md  twa-manifest.json
server/: alembic.ini  pyproject.toml
server/src/easy_breezy/: __init__.py  __main__.py  app.py  auth.py  cli.py  config.py  container.py  logging.py
server/src/easy_breezy/api/: __init__.py  deps.py  schemas.py  ws.py
server/src/easy_breezy/api/rest/: __init__.py  auth.py  automation.py  commands.py  devices.py  groups.py  intents.py  pairing.py  prefs.py  push.py  sensors.py  system.py  telemetry.py
server/src/easy_breezy/automation/: __init__.py  clock.py  maintain.py  scenarios.py  scheduler.py  triggers.py
server/src/easy_breezy/ble/: __init__.py  _bluez_agent.py  driver.py  fake.py  scanner.py  supervisor.py  transport.py
server/src/easy_breezy/ble/protocol/: __init__.py  framing.py  s4.py
server/src/easy_breezy/core/: __init__.py  bus.py  events.py  holds.py  model.py  pairing.py  push.py  registry.py  sdnotify.py  sensors.py  state.py  telemetry.py  watchdog.py
server/src/easy_breezy/integrations/: __init__.py
server/src/easy_breezy/integrations/intents/: __init__.py  model.py  rules.py  service.py
server/src/easy_breezy/integrations/magicair/: __init__.py  client.py
server/src/easy_breezy/integrations/mqtt/: __init__.py  client.py
server/src/easy_breezy/integrations/yandex/: __init__.py  callbacks.py  mapping.py  oauth.py  router.py
server/src/easy_breezy/storage/: __init__.py  backup.py  database.py  models.py
server/src/easy_breezy/storage/migrations/: env.py  script.py.mako
server/src/easy_breezy/storage/migrations/versions/: 0001_initial_schema.py  0002_schedule_cursor.py  0003_maintain_triggers.py  0004_user_prefs.py
server/src/easy_breezy/storage/repos/: __init__.py  _util.py  auth.py  automation.py  commands.py  devices.py  groups.py  oauth.py  prefs.py  push.py  sensors.py  settings.py  telemetry.py
server/tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_automation.py  test_automation_api.py  test_cli_users.py  test_command_bus.py  test_driver.py  test_events.py  test_framing.py  test_golden_integrity.py  test_health.py  test_holds.py  test_intents.py  test_maintain.py  test_model.py  test_oauth.py  test_pairing.py  test_polish.py  test_prefs_api.py  test_registry.py  test_s4_codec.py  test_sensors.py  test_sensors_api.py  test_storage.py  test_supervisor.py  test_telemetry.py  test_triggers.py  test_yandex_api.py  test_yandex_callbacks.py  test_yandex_mapping.py
server/tests/golden/: lite_status_response.json  s3_status_response.json  s4_requests.json  s4_status_response.json  yandex_device_descriptor.json
tests/unit/: test_api_devices.py  test_device_manager.py  test_operator.py  test_scenarist.py  test_yandex_api_integration.py
tion_btle/: device_manager.py  operator.py  scenarist.py  tion.py
tion_btle/domain/device_manager/: __init__.py  device_manager.py  interfaces.py  models.py  sqlite_storage.py  test_device_manager.py  test_sqlite_storage.py
tion_btle/domain/device_manager/tests/: test_device_manager.py  test_sqlite_storage.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/public/.well-known/: assetlinks.json
ui/src/: App.tsx  index.css  main.tsx  sw.ts  test-setup.ts  ws.ts
ui/src/api/: client.ts  queries.ts  types.ts
ui/src/components/: DeviceCard.test.tsx  DeviceCard.tsx  IntentBar.test.tsx  IntentBar.tsx  PairWizard.test.tsx  PairWizard.tsx  SensorCard.test.tsx  SensorCard.tsx  ui.tsx
ui/src/lib/: cron.test.ts  cron.ts  push.ts  usePersistentState.test.ts  usePersistentState.ts
ui/src/pages/: Automation.tsx  Charts.tsx  Dashboard.tsx  Devices.tsx  Login.tsx  Settings.tsx
