[project]
name = "easy-breezy"
version = "0.2.2"
description = "Локальный сервис управления бризерами Tion: BLE, Умный дом Яндекса, PWA, автоматизация"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "bleak>=3.0.2",
    "typer>=0.26.8",
    "dbus-fast>=5.0.22",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "argon2-cffi>=23.1",
    "httpx>=0.27",
    "python-multipart>=0.0.32",
    "croniter>=6.2.4",
    "aiomqtt>=2.5.1",
    "pywebpush>=2.3.0",
]

[project.scripts]
breezy = "easy_breezy.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "black>=24.10",
    "isort>=5.13",
    "mypy>=1.13",
    "types-croniter>=6.2.4.20260711",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/easy_breezy"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "B",         # bugbear
    "I",         # isort
    "UP",        # pyupgrade
    "ASYNC",     # запреты блокирующих вызовов в asyncio
    "T20",       # запрет print()
    "SIM",       # упрощения
    "RUF",
]
ignore = [
    "RUF001", "RUF002", "RUF003",  # «неоднозначная» кириллица: проект русскоязычный
]

[tool.ruff.lint.per-file-ignores]
# Тесты: busy-wait-поллинг с инжектируемым сном — осознанный паттерн
"tests/*" = ["ASYNC109", "ASYNC110"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
packages = ["easy_breezy"]

[[tool.mypy.overrides]]
# pywebpush/py_vapid без py.typed; наши обёртки типизированы
module = ["pywebpush", "py_vapid"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.coverage.run]
source = ["src/easy_breezy"]
